2015-05-03  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/bookfile.py (BookFile.__init__): minor
	corrections to dirname, basename, and filename

2015-03-22  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: Added 1/4, 1/2, and 3/4 symbols

2015-03-07  Jim Fowler  <jrf@Biblion>

	* WebPages/BlogLists.txt: Replaced thebooker.tumblr.com
	with forreadingaddicts.co.uk.

2015-02-15  Jim Fowler  <jrf@Biblion>

	* Tools/doc/block_diagram.png: added block diagram image.

	* WebPages/SemanticWeb.txt: Added Build Tools to Semantic Web.
	Linked to Protege and Callimachus Projects. Downloaded tarball of
	Protege.

2015-01-19  Jim Fowler  <jrf@Biblion>

	* WebPages/SemanticWeb.php: Added information regarding
	the Semantic Web.

2014-11-29  Jim Fowler  <jrf@Biblion>

	* WebPages/BookBinding.txt: added Hollanders supplies.

2014-11-15  Jim Fowler  <jrf@Biblion>

	* WebPages/BlogLists.txt: added youth25.tumblr.com and
	callumjames.blogspot.com

2014-11-01  Jim Fowler  <jrf@Biblion>

	* WebPages/BookBinding.txt: Added Affordable Binding Equipment,
	Bookbinders Chronicle, and Amanda Buck.

2014-10-04  Jim Fowler  <jrf@Biblion>

	* WebPages/BookBinding.php: Added Book Binding web page
	to store information and history of book binding.

2014-09-28  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/symbols.txt: added less than or equal and
	greater than or equal signs.

2014-09-27  Jim Fowler  <jrf@Biblion>

	* Tools/bookentry/utils.py: Updated Suffix addition to support
	nameparser_0.3.3.  The new version of nameparser was installed
	today.

2014-09-17  Jim Fowler  <jrf@Biblion>

	* WebPages/BlogLists.txt: added Books and Buildings page from
	tumblr.com.

2014-09-16  Jim Fowler  <jrf@Biblion>

	* WebPages/BlogLists.txt: Added Michael Moons Bookshop

2014-06-27  Jim Fowler  <jrf@Biblion>

	* Docs/history_notes.tex: Added history_notes to the general
	Notes.tex.

2014-04-06  Jim Fowler  <jrf@Biblion>

	* Docs/socsci_notes.tex: Added section to Notes.tex for notes